[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-ai-agent-v2"
version = "0.1.0"
description = "An LLM powered research assistant for arxiv.org with OpenAI and free hosted LLM modes."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Nurtekin Savas" }
]

license = { text = "MIT" }

dependencies = [
  "streamlit>=1.50.0",
  "requests>=2.31.0",
  "feedparser>=6.0.10",
  "openai>=1.55.0",
]

[project.urls]
Homepage = "https://github.com/nurtekinsavasai/arxiv-agent-v2"



